--- a/cocacola/css/style-m.css
+++ b/cocacola/css/style-m.css
@@ -249,7 +249,8 @@
     margin: 10px auto;
     transition: 0.5s;
     width:230px; /* 가로사이즈를 pc용보다 작게*/
-    height: 230px; /* 세로사이즈를 pc용보다 작게*/
+    aspect-ratio: 1 / 1;
+    height: auto !important;
     border-radius: 10px !important;
 
 
