--- a/cocacola/css/style-m.css
+++ b/cocacola/css/style-m.css
@@ -332,13 +332,22 @@
     content:'\f106' !important; /* up 화살표 아이콘  */
   }
   #footer-m .btn{
-    color:white;
+    /* color:white;
     border:2px solid white;
     border-radius: 50px;
     padding:5px 70px;
     display: block;
     width:90%;
+    margin: 45px auto !important; */
+
+    border-radius: 50px;
+    padding:5px 100px;
+    display: block;
+    width:90%;
     margin: 45px auto !important;
+    border:2px solid black;
+    font-weight: bold;
+
   }
 
   #footer-m .fa-brands{
