--- a/cocacola/css/style-m.css
+++ b/cocacola/css/style-m.css
@@ -339,13 +339,13 @@
     display: block;
     width:90%;
     margin: 45px auto !important; */
-
+    color:white;
     border-radius: 50px;
     padding:5px 100px;
     display: block;
     width:90%;
     margin: 45px auto !important;
-    border:2px solid black;
+    border:2px solid white;
     font-weight: bold;
 
   }
