--- a/cocacola/css/style-m.css
+++ b/cocacola/css/style-m.css
@@ -212,6 +212,10 @@
   #tomorrow{
     height: 700px;
     padding:0;
+    display: flex;
+    flex-direction: column;  /* 세로로 배치 */
+    align-items: stretch;    /* 자식 요소들이 부모에 맞게 늘어지도록 설정 */
+    padding: 40px 0;         /* 충분한 여백을 추가 */
   }
 
   #tomorrow .col-md-6:nth-child(1){
