--- a/cocacola/css/style-m.css
+++ b/cocacola/css/style-m.css
@@ -105,7 +105,7 @@
   .slider .slide,
   .slider .slide img {
     width: 100%;
-    height: 700px !important; /* 높이를 크게 설정 */
+    height: 650px !important; /* 높이를 크게 설정 */
     border-radius: 10px;
   }
   /* pc용 슬라이더와 모바일용 슬라이더를 미리 만들어 두고 교체방식으로 구현 */
@@ -134,15 +134,11 @@
 
 
 /* 스마트폰 화면에서 Slick Slider Dots 설정 */
-.slick-slider {
-  position: relative !important;
-  overflow: visible !important;
-}
 
 
 .slick-dots {
   position: absolute !important;
-  bottom: 10px !important;
+  bottom: -50px !important;
   width: 100% !important;
   text-align: center !important;
   z-index: 9999 !important;
@@ -150,11 +146,12 @@
   display: block !important;
   pointer-events: auto !important;
   background: red !important;
+  border:2px solid black;
 }
 
 .slick-dots li button:before {
   font-size: 14px !important;
-  color: #000 !important;
+  color: #cba3a3 !important;
   opacity: 1 !important;
 }
 
