--- a/cocacola/css/style-m.css
+++ b/cocacola/css/style-m.css
@@ -147,6 +147,7 @@
   pointer-events: auto !important;
   background: red !important;
   border:2px solid black;
+  color:black !important
 }
 
 .slick-dots li button:before {
