--- a/cocacola/css/style-m.css
+++ b/cocacola/css/style-m.css
@@ -133,9 +133,18 @@
   }
 
   .slick-dots li button:before {
-    font-size: 24px  !important; /* 모바일용 크기 */
+    font-size: 0; /* 기본 점 없애기 */  
+    content: '\26AA' !important; /* down 화살표 아이콘  */   
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+
   }
 
+  .slick-dots li.slick-active button:before {
+    content: '\26AB' !important; /* down 화살표 아이콘  */   
+  }
  
 
 
