--- a/cocacola/css/style-m.css
+++ b/cocacola/css/style-m.css
@@ -138,7 +138,7 @@
     left: 0;
   }
 
-  .slick-dots li button:before {
+  .slick-dots li button:after {
     background-color: black;
     border-radius: 8000px;
     height: 18px;
