--- a/cocacola/css/style-m.css
+++ b/cocacola/css/style-m.css
@@ -139,7 +139,7 @@
   }
 
   .slick-dots li button:after {
-    background-color: black;
+    background-color: gray;
     border-radius: 8000px;
     height: 18px;
     margin: 0px;
@@ -148,6 +148,9 @@
     width: 18px;
   }
 
+  .slick-dots li.slick-active button:after {
+     background-color: black;
+  }
 
   /* 이달의 pick박스 설정 */
   #month-pick {
